syntax = "proto3";

package auth;

service Auth {
  rpc VerifyToken(AuthRequest) returns (AuthReply) {}
}

message AuthRequest {
  string authToken = 1;
}

message AuthReply {
  Customer customer = 1;
}

message Customer {
  int32 id = 1;
  string authToken = 2;
}
